# gtaakit

./: .gitignore  README.md  pyproject.toml
examples/: manual_run.py
examples/petstore/: gtaakit.example.yaml  test_petstore.py
examples/petstore/config/: base.yaml
src/gtaakit/: __init__.py  cli.py
src/gtaakit/adapters/: __init__.py
src/gtaakit/adapters/http/: __init__.py  httpx_client.py
src/gtaakit/adapters/reporters/: __init__.py  console.py  junit_xml.py
src/gtaakit/adapters/runner/: __init__.py  pytest_plugin.py
src/gtaakit/adapters/validators/: __init__.py  header.py  json_schema.py  status_code.py
src/gtaakit/config/: __init__.py  manager.py
src/gtaakit/core/: __init__.py  case_execution.py  runner.py
src/gtaakit/domain/: __init__.py  events.py  http.py  test_case.py  validation.py
src/gtaakit/ports/: __init__.py  http_client.py  reporter.py  validator.py
tests/: conftest.py
tests/integration/: test_httpx_client.py
tests/unit/: test_case_execution.py  test_cli.py  test_collect_cases.py  test_configuration_manager.py  test_console_reporter.py  test_header_validator.py  test_http_types.py  test_json_schema_validator.py  test_junit_xml_reporter.py  test_runner.py  test_status_code_validator.py
