[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtaakit"
version = "0.1.0"
description = "Reference architecture for API test automation"
authors = [
    { name = "Ariadna Velasco Ibañez" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/AriVelasco/gtaakit"

[tool.hatch.build.targets.wheel]
packages = ["src/gtaakit"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"